# rust-okta-authorizer

./: .gitignore  README.md  samconfig.toml  template.yaml
authorizer/: Cargo.toml
authorizer/src/: dynamo_service.rs  iam_policy.rs  jwt_service.rs  main.rs
events/: authorizer.json
rust_app/: Cargo.toml
