[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.1"
aws-sdk-config = "0.34.0"
aws-sdk-dynamodb = "0.34.0"
aws_lambda_events = "0.11.1"
jsonwebtoken = "9.1.0"

lambda_runtime = "0.6.0"
openssl = { version = "0.10.57", features = ["vendored"]}
reqwest = { version="0.11.22", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.107"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
